--- a/src/components/Futer/Futer.module.css
+++ b/src/components/Futer/Futer.module.css
@@ -1,10 +1,12 @@
 .futer {
-  grid-area: f;
-  background-color: rgb(0, 0, 0);
+    grid-area: f;
+    background-color: rgb(0, 0, 0);
+    margin: 10px;
 }
-.footerauthor{
-  float: none;
-  text-align: center;
-  font-size: 24px;
-  color: #ffffff;
- }
+
+.footerauthor {
+    float: none;
+    text-align: center;
+    font-size: 24px;
+    color: #ffffff;
+}
