--- a/src/components/Administrator/MyApps/TestStand/Dashboard/Instrumentation/SwitchDevices/LoadIndicator/LoadIndicator.module.css
+++ b/src/components/Administrator/MyApps/TestStand/Dashboard/Instrumentation/SwitchDevices/LoadIndicator/LoadIndicator.module.css
@@ -1,8 +1,9 @@
-.dashboard {
+.speedometer {
     width: 250px;
     height: 250px;
-}
+    background-image: url(./speedometer.png);
 
+    }
 /*------------------------------------------------------------------------------*/
 .usersItem {
     display: grid;
