--- a/src/components/Showcase/Template/Header/Header.module.css
+++ b/src/components/Showcase/Template/Header/Header.module.css
@@ -1,35 +1,51 @@
 .header {
     width: 100%;
-    padding: 200px 400px 0 0;
-
     background: blue;
     background-image: url(./123.png);
-    /* display: grid;
-    grid-template-columns: 1fr 0.1fr; */
+    background-size: cover;
     color: rgb(255, 255, 255);
     font-weight: normal;
-    text-align: center;
+    text-align: left;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-shadow: 0px 0px 4px blue;
 }
+
+.header h1 {
+    font-size: 44px;
+    padding: 200px 400px 0 0;
+    margin: 0 0 0 20px;
+}
+
+.header p {
+    font-size: 30px;
+    font-style: italic;
+    margin: 0 0 0 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 
 @media (min-width: 320px) {
     .header {
-        padding: 150px 0 0 0;
         height: 603px;
+
     }
 
     .header h1 {
-        font-size: 50px;
+        padding: 150px 0 0 0;
+        margin: 0 0 0 20px;
+        font-size: 44px;
+
     }
 }
 
 @media (min-width: 640px) {
     .header {
-        height: 832px;
+        height: 603px;
         padding: 100px 0 0 0;
     }
 
     .header h1 {
-        font-size: 82px;
+        font-size: 100px;
+        margin: 0 0 0 20px;
     }
 }
