--- a/src/components/Showcase/Template/Contents/1Greeting/Header/Header.module.css
+++ b/src/components/Showcase/Template/Contents/1Greeting/Header/Header.module.css
@@ -1,19 +1,8 @@
 .header {
     background: rgb(253, 253, 253);
-    padding: 1px;
+    text-align: center;
 }
 
-.twoColumns {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-.threeColumns {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-.fourColumns {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+.header h2 {
+    margin: 1px 0 0 0;
 }
