--- a/src/components/Showcase/Template/Navbar/Navbar.module.css
+++ b/src/components/Showcase/Template/Navbar/Navbar.module.css
@@ -32,7 +32,7 @@
 
 @media (min-width: 640px) {
     .navBar {
-        background: blue;
+        background: rgb(255, 255, 255);
         padding: 1px;
     }
 
